[package]
name = "space-ducky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version="1.13.1",features=["derive"]}
env_logger = "0.10"
image = "0.24"
log = "0.4"
pollster = "0.3"
rand = "0.8.5"
wgpu = "0.17"
winit = "0.28.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
console_log = "1"
wasm-bindgen-futures = "0.4.34"
web-sys = {version="0.3.64", features = [
    "Location",
    "Blob",
    "RequestInit",
    "RequestMode",
    "Request",
    "Response",
    "WebGl2RenderingContext",
    "CanvasRenderingContext2d"
] }


[features]
uniforms = []
vbuf = []
default = []
webgl = ["wgpu/webgl"]